--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,12 @@
   "singleQuote": false,
   "trailingComma": "all",
   "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "endOfLine": "lf",
+  "jsxSingleQuote": false,
   "semi": true,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
