--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "template-nextjs13",
+  "name": "template-nextjs",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo --port 3030",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
-    "add:ui": "pnpm dlx shadcn-ui add -y --overwrite"
+    "add:ui": "npx shadcn-ui add -y --overwrite"
   },
-  "packageManager": "pnpm@8.7.0",
   "maintainers": [
     "meiazero <avilaemanueel@gmail.com>"
   ],
   "dependencies": {
     "@radix-ui/react-slot": "1.0.2",
     "class-variance-authority": "0.7.0",
-    "clsx": "2.0.0",
-    "lucide-react": "0.284.0",
-    "next": "13.5.4",
+    "clsx": "2.1.0",
+    "lucide-react": "0.358.0",
+    "next": "14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "1.14.0",
+    "tailwind-merge": "2.2.1",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
-    "@types/node": "20.8.3",
-    "@types/react": "18.2.25",
-    "@types/react-dom": "18.2.11",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.51.0",
-    "eslint-config-next": "13.5.4",
-    "postcss": "8.4.31",
-    "prettier": "3.0.3",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "@types/node": "20.11.27",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.22",
+    "autoprefixer": "10.4.18",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.3",
+    "postcss": "8.4.35",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.4.2"
   },
   "license": "MIT"
 }
