--- a/package.json
+++ b/package.json
@@ -4,39 +4,35 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
     "add:ui": "npx shadcn-ui add -y --overwrite"
   },
-  "maintainers": [
-    "meiazero <avilaemanueel@gmail.com>"
-  ],
   "dependencies": {
     "@radix-ui/react-slot": "1.0.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
-    "lucide-react": "0.358.0",
-    "next": "14.1.3",
+    "lucide-react": "0.363.0",
+    "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "2.2.1",
+    "tailwind-merge": "2.2.2",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
-    "@types/node": "20.11.27",
-    "@types/react": "18.2.66",
-    "@types/react-dom": "18.2.22",
-    "autoprefixer": "10.4.18",
+    "@types/node": "20.12.2",
+    "@types/react": "18.2.73",
+    "@types/react-dom": "18.2.23",
+    "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.3",
-    "postcss": "8.4.35",
+    "eslint-config-next": "14.1.4",
+    "postcss": "8.4.38",
     "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.4.2"
-  },
-  "license": "MIT"
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.3"
+  }
 }
